# Projet-open-data---Sujet-criminalit---Meissa-Hedi-Groupe-10

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
notebooks/: README.md
utils/: __init__.py  charts.py  chatbot.py  data.py
