[project]
name = "safecity"
version = "0.1.0"
description = "Tableau de bord sécurité urbaine - Analyse de la criminalité en France"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.29.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.16.0",
    "litellm>=1.17.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
